Updated CustomerHandler.java (change the structure of json output like separating messages and data)